Release v0.1.3: project-level javac + JDK-too-old notification
Bump to 0.1.3 and document the multi-JDK handling (compile at the
project's declared Java release; clear diagnostic + notification when the
JDK is too old for it).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015zGcSbsXEtXycwFKHnsGMn